<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diet1_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:inputType="textMultiLine"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet1_content"
            android:minLines="5"
            android:textSize="20sp"
            android:layout_marginBottom="100sp"
            android:inputType="textMultiLine"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diet2_title"
            android:textStyle="bold"
            android:textSize="25sp"
            android:inputType="textMultiLine"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet2_content"
            android:layout_marginBottom="100sp"
            android:minLines="5"
            android:textSize="20sp"
            android:inputType="textMultiLine"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/diet3_title"
            android:textSize="25sp"
            android:inputType="textMultiLine"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginBottom="100sp"
            android:layout_height="wrap_content"
            android:text="@string/diet3_content"
            android:minLines="5"
            android:textSize="20sp"
            android:inputType="textMultiLine"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/diet4_title"
            android:textSize="25sp"
            android:inputType="textMultiLine"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100sp"
            android:text="@string/diet4_content"
            android:minLines="5"
            android:textSize="20sp"
            android:inputType="textMultiLine"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diet5_title"
            android:textStyle="bold"
            android:textSize="25sp"
            android:inputType="textMultiLine"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100sp"
            android:text="@string/diet5_content"
            android:minLines="5"
            android:textSize="20sp"
            android:inputType="textMultiLine"/>

    </LinearLayout>


</ScrollView>